--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,9 +1,11 @@
 @use "sass:color";
 
-//Colors
 $darkColor: #13405d;
 $mediumColor: color.scale($darkColor, $lightness: 40%);
 $lightColor: color.scale($darkColor, $lightness: 70%);
 $backgroundMessage: #fff;
-//Size
 $inputHeight: 4rem;
+
+$accentColor: #6c1283;
+$accentColorLight: color.scale($accentColor, $lightness: 10%);
+$accentColorLighter: color.scale($accentColor, $lightness: 40%);
