--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -32,6 +32,23 @@
     background-color: transparent;
     border: none;
     position: absolute;
+
+
+    .field {
+      margin: 2rem 0;
+
+      &-input {
+        padding: 0.7rem;
+        border-radius: 5px;
+        border: 1px solid transparent;
+        font-size: 1.2rem;
+
+        &:focus {
+          border-color: vars.$accentColorLighter;
+        }
+      }
+    }
+
     right: 0;
     padding: 0.7em ° 0.3em 0;
     color: vars.$mediumColor;
@@ -141,7 +158,6 @@
 }
 
 // CSS du Field 
-@use "src/styles/vars";
 
 .field {
   margin: 2rem 0;
