--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,3 +5,17 @@ body {
   font-family: sans-serif;
   background-color: vars.$darkColor;
 }
+
+@keyframes grow {
+  0% {
+    opacity: 0%;
+    width: 0%;
+    transform: scale(0);
+  }
+
+  100% {
+    opacity: 100%;
+    width: 100%;
+    transform: scale(1);
+  }
+}
